logs/versile-python.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/versile'...
Listing './lib/python3.5/site-packages/versile/common'...
Listing './lib/python3.5/site-packages/versile/crypto'...
Listing './lib/python3.5/site-packages/versile/crypto/algorithm'...
Listing './lib/python3.5/site-packages/versile/crypto/x509'...
Listing './lib/python3.5/site-packages/versile/crypto/x509/asn1def'...
Compiling './lib/python3.5/site-packages/versile/crypto/x509/cert.py'...
***   File "./lib/python3.5/site-packages/versile/crypto/x509/cert.py", line 451
    _ctag = lambda(n): VASN1Tag(VASN1Tag.CONTEXT, n)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/versile/manager'...
Listing './lib/python3.5/site-packages/versile/manager/dispatch'...
Compiling './lib/python3.5/site-packages/versile/manager/dispatch/__init__.py'...
***   File "./lib/python3.5/site-packages/versile/manager/dispatch/__init__.py", line 408
    exec code in self.namespace
            ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/versile/orb'...
Compiling './lib/python3.5/site-packages/versile/orb/url.py'...
***   File "./lib/python3.5/site-packages/versile/orb/url.py", line 690
    q_kargs.append([decoder(e) for e in key, value])
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/versile/reactor'...
Listing './lib/python3.5/site-packages/versile/reactor/io'...
Listing './lib/python3.5/site-packages/versile/temp'...
Listing './lib/python3.5/site-packages/versile/vse'...
Listing './lib/python3.5/site-packages/versile/vse/native'...
Listing './lib/python3.5/site-packages/versile_python-0.8.1b0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
